--- a/Curso-JavaScript/mi-primer-proyecto-de-node/package.json
+++ b/Curso-JavaScript/mi-primer-proyecto-de-node/package.json
@@ -4,6 +4,8 @@
   "description": "Este es mi primer proyecto de JavaScript con node en Open Booctcamp",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "saludar": "node holaMundo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
